--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ pytesseract==0.3.10
 Pillow==10.1.0
 aiofiles==23.2.1
 stripe==12.5.0
+# Security dependencies
+PyJWT==2.8.0
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
+slowapi==0.1.9
+passlib[bcrypt]==1.7.4
