--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ python-multipart==0.0.6
 jinja2==3.1.2
 PyPDF2==3.0.1
 PyMuPDF==1.23.7
-pytesseract==0.3.10
 Pillow==10.1.0
 aiofiles==23.2.1
 stripe==12.5.0
@@ -14,3 +13,5 @@ bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 slowapi==0.1.9
 passlib[bcrypt]==1.7.4
+# Optional OCR (commented out for Railway compatibility)
+# pytesseract==0.3.10
