Add Railway-compatible OCR functionality
- Add EasyOCR as Railway-compatible OCR solution
- Implement extract_text_with_ocr() using EasyOCR
- Keep Tesseract as optional fallback for local development
- Add get_ocr_text() function with priority: EasyOCR > Tesseract
- OCR now works on Railway without system dependencies
- Maintains backward compatibility with existing code

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 slowapi==0.1.9
 passlib[bcrypt]==1.7.4
-# Optional OCR (commented out for Railway compatibility)
-# pytesseract==0.3.10
+# OCR functionality
+easyocr==1.7.0
+# Optional: pytesseract==0.3.10 (requires system Tesseract)
