--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ PyMuPDF==1.23.7
 Pillow==10.1.0
 aiofiles==23.2.1
 stripe==12.5.0
+python-dotenv==1.0.0
 # Security dependencies
 PyJWT==2.8.0
 bcrypt==4.1.2
