--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   # db:
   #   image: postgres:13
   #   environment:
-  #     POSTGRES_DB: fineprint_simplifier
+  #     POSTGRES_DB: smallprintchecker
   #     POSTGRES_USER: postgres
   #     POSTGRES_PASSWORD: password
   #   volumes:
