--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 jinja2==3.1.2
 PyPDF2==3.0.1
-PyMuPDF==1.23.7
-Pillow==10.1.0
+# PyMuPDF==1.23.7  # Commented out due to build issues on Windows
+Pillow>=9.0.0
 aiofiles==23.2.1
 stripe==12.5.0
 python-dotenv==1.0.0
@@ -16,3 +16,7 @@ slowapi==0.1.9
 passlib[bcrypt]==1.7.4
 # OCR functionality
 easyocr==1.7.0
+pdf2image==1.16.3
+# File type support
+python-docx==1.1.0
+pytesseract==0.3.10
