Implement complete Resend email integration - Added resend==0.8.0 to requirements.txt - Created email_service.py with EmailService class - Beautiful HTML email templates for all transactional emails - Welcome email on registration with feature highlights - Password reset emails with secure 30-min expiring links - Password changed security notifications - Optional monthly limit reminder emails - Graceful fallback: displays links if Resend not configured - Environment variables: RESEND_API_KEY, FROM_EMAIL, SITE_URL - Comprehensive RESEND_EMAIL_SETUP.md documentation - Works in development mode without Resend configured - Production-ready with proper error handling - 10,000 free emails/month (more than sufficient)

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Pillow>=9.0.0
 aiofiles==23.2.1
 stripe==12.5.0
 python-dotenv==1.0.0
+resend==0.8.0
 # Security dependencies
 PyJWT==2.8.0
 bcrypt==4.1.2
