--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ pdf2image==1.16.3
 python-docx==1.1.0
 # Lightweight OCR - no system dependencies
 paddleocr==2.7.3
+# Database dependencies
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+alembic==1.12.1
